feat: implement OpenClaw memory plugin + refactor dashboard to status-only integrations (v1.4.0)
OpenClaw plugin (integrations/openclaw-plugin/):
- kind:"memory" exclusive slot plugin with zero runtime dependencies
- MCP stdio client: JSON-RPC 2.0 with Content-Length framing
- 6 core tools: nmem_remember, nmem_recall, nmem_context, nmem_todo, nmem_stats, nmem_health
- 2 lifecycle hooks: before_agent_start (auto-context), agent_end (auto-capture)
- 1 service: neuralmemory-mcp process lifecycle
- Configurable via uiHints: pythonPath, brain, autoContext, autoCapture, contextDepth

Dashboard refactor (Option B — OpenClaw is hub, NM is specialist):
- Integrations tab: removed OAuth/OpenClaw/Channel config forms
- Replaced with 6 status-only cards + deep links to each service's dashboard
- Gutted oauth.js (155→7 lines) and openclaw.js (383→7 lines)
- Updated en.json/vi.json: removed 15 config keys, added 9 status keys

--- a/src/neural_memory/server/static/locales/en.json
+++ b/src/neural_memory/server/static/locales/en.json
@@ -16,25 +16,6 @@
   "node_detail": "Node Detail",
   "connected": "Connected",
   "not_connected": "Not Connected",
-  "connect": "Connect",
-  "revoke": "Revoke",
-  "oauth_providers": "OAuth Providers",
-  "api_keys": "API Keys",
-  "functions": "Functions",
-  "security": "Security",
-  "channels": "Channels",
-  "enter_api_key": "Enter API key...",
-  "save": "Save",
-  "sandbox_mode": "Sandbox Mode",
-  "allowed_domains": "Allowed Domains",
-  "blocked_commands": "Blocked Commands",
-  "max_tokens": "Max Tokens/Request",
-  "rate_limit": "Rate Limit (RPM)",
-  "bot_token": "Bot Token",
-  "chat_ids": "Chat IDs",
-  "guild_id": "Guild ID",
-  "channel_ids": "Channel IDs",
-  "enabled": "Enabled",
   "language": "Language",
   "brain_management": "Brain Management",
   "export": "Export",
@@ -69,5 +50,14 @@
   "error_occurred": "An error occurred",
   "export_success": "Brain exported successfully",
   "connection_failed": "Connection failed",
-  "switch_to": "Switch to"
+  "switch_to": "Switch to",
+  "int_desc": "Connection status for external services. Each service has its own dashboard for configuration.",
+  "int_nanobot_detail": "Python integration — 4 tools available",
+  "int_providers_auth": "providers authenticated",
+  "int_not_reachable": "Not reachable",
+  "int_api_keys_configured": "API keys configured",
+  "int_not_configured": "Not configured",
+  "int_open_dashboard": "Open Dashboard",
+  "int_configure": "Configure",
+  "int_status_refreshed": "Integration status refreshed"
 }
