--- a/src/neural_memory/server/static/locales/vi.json
+++ b/src/neural_memory/server/static/locales/vi.json
@@ -16,25 +16,6 @@
   "node_detail": "Chi ti\u1ebft N\u00fat",
   "connected": "\u0110\u00e3 k\u1ebft n\u1ed1i",
   "not_connected": "Ch\u01b0a k\u1ebft n\u1ed1i",
-  "connect": "K\u1ebft n\u1ed1i",
-  "revoke": "H\u1ee7y",
-  "oauth_providers": "Nh\u00e0 cung c\u1ea5p OAuth",
-  "api_keys": "Kh\u00f3a API",
-  "functions": "Ch\u1ee9c n\u0103ng",
-  "security": "B\u1ea3o m\u1eadt",
-  "channels": "K\u00eanh li\u00ean l\u1ea1c",
-  "enter_api_key": "Nh\u1eadp kh\u00f3a API...",
-  "save": "L\u01b0u",
-  "sandbox_mode": "Ch\u1ebf \u0111\u1ed9 Sandbox",
-  "allowed_domains": "T\u00ean mi\u1ec1n cho ph\u00e9p",
-  "blocked_commands": "L\u1ec7nh b\u1ecb ch\u1eb7n",
-  "max_tokens": "Token t\u1ed1i \u0111a/Y\u00eau c\u1ea7u",
-  "rate_limit": "Gi\u1edbi h\u1ea1n (l\u01b0\u1ee3t/ph\u00fat)",
-  "bot_token": "Token Bot",
-  "chat_ids": "ID Cu\u1ed9c tr\u00f2 chuy\u1ec7n",
-  "guild_id": "ID M\u00e1y ch\u1ee7",
-  "channel_ids": "ID K\u00eanh",
-  "enabled": "B\u1eadt",
   "language": "Ng\u00f4n ng\u1eef",
   "brain_management": "Qu\u1ea3n l\u00fd N\u00e3o",
   "export": "Xu\u1ea5t",
@@ -69,5 +50,14 @@
   "error_occurred": "\u0110\u00e3 x\u1ea3y ra l\u1ed7i",
   "export_success": "Xu\u1ea5t n\u00e3o th\u00e0nh c\u00f4ng",
   "connection_failed": "K\u1ebft n\u1ed1i th\u1ea5t b\u1ea1i",
-  "switch_to": "Chuy\u1ec3n sang"
+  "switch_to": "Chuy\u1ec3n sang",
+  "int_desc": "Tr\u1ea1ng th\u00e1i k\u1ebft n\u1ed1i v\u1edbi c\u00e1c d\u1ecbch v\u1ee5 b\u00ean ngo\u00e0i. M\u1ed7i d\u1ecbch v\u1ee5 c\u00f3 dashboard ri\u00eang \u0111\u1ec3 c\u1ea5u h\u00ecnh.",
+  "int_nanobot_detail": "T\u00edch h\u1ee3p Python \u2014 4 c\u00f4ng c\u1ee5",
+  "int_providers_auth": "nh\u00e0 cung c\u1ea5p \u0111\u00e3 x\u00e1c th\u1ef1c",
+  "int_not_reachable": "Kh\u00f4ng th\u1ec3 k\u1ebft n\u1ed1i",
+  "int_api_keys_configured": "kh\u00f3a API \u0111\u00e3 c\u1ea5u h\u00ecnh",
+  "int_not_configured": "Ch\u01b0a c\u1ea5u h\u00ecnh",
+  "int_open_dashboard": "M\u1edf Dashboard",
+  "int_configure": "C\u1ea5u h\u00ecnh",
+  "int_status_refreshed": "\u0110\u00e3 l\u00e0m m\u1edbi tr\u1ea1ng th\u00e1i t\u00edch h\u1ee3p"
 }
