feat: implement deep integration status — activity log, setup wizards, import sources (v1.3.0)
Enhanced Integrations tab with live metrics (memories/recalls today, last call),
collapsible activity log with source attribution (MCP/OpenClaw/Nanobot), setup
wizard accordion with copy-to-clipboard config for Claude Code/Cursor/OpenClaw,
and import sources detection panel. Added NEURALMEMORY_SOURCE env var for MCP
source tracking. 12 new tests, 1352 total passing.

--- a/src/neural_memory/server/static/locales/en.json
+++ b/src/neural_memory/server/static/locales/en.json
@@ -59,5 +59,30 @@
   "int_not_configured": "Not configured",
   "int_open_dashboard": "Open Dashboard",
   "int_configure": "Configure",
-  "int_status_refreshed": "Integration status refreshed"
+  "int_status_refreshed": "Integration status refreshed",
+  "int_memories_today": "stored",
+  "int_recalls_today": "recalled",
+  "int_last_call": "Last call",
+  "errors": "errors",
+  "int_activity_log": "Activity Log",
+  "int_no_activity": "No activity recorded yet",
+  "int_activity_refreshed": "Activity log refreshed",
+  "expand": "Expand",
+  "collapse": "Collapse",
+  "just_now": "just now",
+  "ago": "ago",
+  "int_setup_wizards": "Setup Wizards",
+  "int_setup_desc": "Copy config snippets to connect NeuralMemory with your AI tools.",
+  "int_setup_claude_desc": "Add to ~/.claude/mcp_servers.json or project .mcp.json:",
+  "int_setup_cursor_desc": "Add to .cursor/mcp.json in your project root:",
+  "int_setup_openclaw_desc": "Install the NeuralMemory plugin for OpenClaw:",
+  "int_setup_generic_desc": "Standard MCP server configuration (works with any MCP client):",
+  "copy_to_clipboard": "Copy to clipboard",
+  "copied_to_clipboard": "Copied to clipboard!",
+  "int_import_sources": "Import Sources",
+  "int_import_desc": "Import memories from other memory systems (coming soon).",
+  "int_coming_soon": "Coming Soon",
+  "int_import_coming_soon": "Import coming soon",
+  "detected": "Detected",
+  "not_detected": "Not Detected"
 }
