--- a/src/neural_memory/server/static/locales/vi.json
+++ b/src/neural_memory/server/static/locales/vi.json
@@ -59,5 +59,30 @@
   "int_not_configured": "Ch\u01b0a c\u1ea5u h\u00ecnh",
   "int_open_dashboard": "M\u1edf Dashboard",
   "int_configure": "C\u1ea5u h\u00ecnh",
-  "int_status_refreshed": "\u0110\u00e3 l\u00e0m m\u1edbi tr\u1ea1ng th\u00e1i t\u00edch h\u1ee3p"
+  "int_status_refreshed": "\u0110\u00e3 l\u00e0m m\u1edbi tr\u1ea1ng th\u00e1i t\u00edch h\u1ee3p",
+  "int_memories_today": "\u0111\u00e3 l\u01b0u",
+  "int_recalls_today": "\u0111\u00e3 truy v\u1ea5n",
+  "int_last_call": "L\u1ea7n g\u1ecdi cu\u1ed1i",
+  "errors": "l\u1ed7i",
+  "int_activity_log": "Nh\u1eadt k\u00fd Ho\u1ea1t \u0111\u1ed9ng",
+  "int_no_activity": "Ch\u01b0a c\u00f3 ho\u1ea1t \u0111\u1ed9ng n\u00e0o",
+  "int_activity_refreshed": "\u0110\u00e3 l\u00e0m m\u1edbi nh\u1eadt k\u00fd ho\u1ea1t \u0111\u1ed9ng",
+  "expand": "M\u1edf r\u1ed9ng",
+  "collapse": "Thu g\u1ecdn",
+  "just_now": "v\u1eeba xong",
+  "ago": "tr\u01b0\u1edbc",
+  "int_setup_wizards": "H\u01b0\u1edbng d\u1eabn C\u00e0i \u0111\u1eb7t",
+  "int_setup_desc": "Sao ch\u00e9p c\u1ea5u h\u00ecnh \u0111\u1ec3 k\u1ebft n\u1ed1i NeuralMemory v\u1edbi c\u00f4ng c\u1ee5 AI c\u1ee7a b\u1ea1n.",
+  "int_setup_claude_desc": "Th\u00eam v\u00e0o ~/.claude/mcp_servers.json ho\u1eb7c .mcp.json c\u1ee7a d\u1ef1 \u00e1n:",
+  "int_setup_cursor_desc": "Th\u00eam v\u00e0o .cursor/mcp.json trong th\u01b0 m\u1ee5c g\u1ed1c d\u1ef1 \u00e1n:",
+  "int_setup_openclaw_desc": "C\u00e0i \u0111\u1eb7t plugin NeuralMemory cho OpenClaw:",
+  "int_setup_generic_desc": "C\u1ea5u h\u00ecnh MCP server chu\u1ea9n (t\u01b0\u01a1ng th\u00edch m\u1ecdi MCP client):",
+  "copy_to_clipboard": "Sao ch\u00e9p",
+  "copied_to_clipboard": "\u0110\u00e3 sao ch\u00e9p!",
+  "int_import_sources": "Ngu\u1ed3n Nh\u1eadp",
+  "int_import_desc": "Nh\u1eadp k\u00fd \u1ee9c t\u1eeb c\u00e1c h\u1ec7 th\u1ed1ng b\u1ed9 nh\u1edb kh\u00e1c (s\u1eafp ra m\u1eaft).",
+  "int_coming_soon": "S\u1eafp ra m\u1eaft",
+  "int_import_coming_soon": "T\u00ednh n\u0103ng nh\u1eadp s\u1eafp ra m\u1eaft",
+  "detected": "\u0110\u00e3 ph\u00e1t hi\u1ec7n",
+  "not_detected": "Kh\u00f4ng ph\u00e1t hi\u1ec7n"
 }
